@@ -1,3 +1,8 @@
+2021-09-16 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSJSONSerialization.m:
+	Fix minor potential leaks.
+
 2021-08-27 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/nstzfile.h: deleted (merged into tzdb.h)
